<resources>
    <string name="app_name">EyeCGas Stream 2.0</string>
    <string name="question1">
        Where to find the EyeCGas IP Address?</string>
    <string name="ans1">
        1. The rtsp URL should be entered as rtsp://\"EyeCGas Camera IP Address\"/video.sdp
      \n2. In EyeCGas camera navigate to Menu > Settings > System Info > Network > WiFi HotSpot > IP
    </string>
    <string name="question2">
        How to enter rtsp URL?</string>
    <string name="ans2">
        * For EyeCGas IP = 192.168.1.5 then enter rtsp://192.168.1.5/video.sdp
    </string>
    <string name="alert_dialog_two_buttons_title">Test</string>
    <string name="streamQ1">
        Stream video is not showing?
    </string>
    <string name="streamAns1">
        * If you do not see video stream, then please check the rtsp URL and the WiFi connection name.
      \nUse the android navigation button to go back to the previous screen.
    </string>
    <string name="wifiQ1">
        How to connect to Camera using WiFi?
    </string>
    <string name="wifiQ11">
        1. Click on wifi icon to view and select the EyeCGas Camera WiFi network.
        \n The EyeCGas camera WiFi name will be same as SSID.</string>
    <string name="wifiQ12">2.To find EyeCGas Camera SSID, navigate to Menu > Settings > System Info > Network > WiFi HotSpot > SSID:</string>
    <string name="wifiQ1End">
      3.When connection is done the EyeCGas Camera WiFi name will be displayed, else No WiFi Connection will be displayed.
    </string>
    <string name="wifiQ2">
        How to view stream video?
    </string>
    <string name="wifiAns2">
        After EyeCGas Camera WiFi connection is established,
        \n1. enter the rtsp URL
        \n2. click on View button.
    </string>
    <string name="wifiQ3">
        How to create camera shortcut?
    </string>
    <string name="wifiAns3">
        1. Use Create Shortcut &amp; View button to create shortcut. Maximum 5 shortcuts can be saved.
      \n2. The shortcut displays the EyeCGas Camera WiFi name and the rtsp URL.
      \n3.Use delete icon to delete the shortcut.
    </string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="camera">Camera</string>
</resources>















