<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="EyeCGas Stream Help"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="6dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="67dp">
                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/light_green">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtQuestion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/wifiQ1"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/downarrow1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_drop_down"
                            app:tint="@color/black"
                            />

                        <TextView
                            android:id="@+id/txtSeemore"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="See more"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:visibility="gone" />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="#dddd"
                        />
                    <LinearLayout
                        android:id="@+id/linearAns1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <TextView
                            android:id="@+id/txtQ1AnsPoint1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="@string/wifiQ11"
                            android:textSize="16sp" />
                        <ImageView
                            android:id="@+id/imgHelp1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:src="@drawable/wifiansimg1"
                            />

                        <TextView
                            android:id="@+id/txtQ1AnsPoint2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="@string/wifiQ12"
                            android:textSize="16sp" />
                        <ImageView
                            android:id="@+id/imgHelp2"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:src="@drawable/wifiansimg2"
                            />

                        <TextView
                            android:id="@+id/txtQ1AnsPoint3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="@string/wifiQ1End"
                            android:textSize="16sp" />
                        <ImageView
                            android:id="@+id/imgHelp3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:src="@drawable/wifiansimg3"
                            />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="6dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="67dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/light_green">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtQuestion2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/wifiQ2"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/downarrow2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_drop_down"
                            app:tint="@color/black"
                            />

                        <TextView
                            android:id="@+id/txtSeemore2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="See more"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:visibility="gone" />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="#dddd"
                        />
                    <LinearLayout
                        android:id="@+id/linearAns2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtQ2AnsPoint1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wifiAns2"
                            android:textColor="#000000"
                            android:textSize="16sp" />
                        <ImageView
                            android:id="@+id/imgHelp4"
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:src="@drawable/wifiansimg4"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="6dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="67dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/light_green">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtQuestion3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/wifiQ3"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/downarrow3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_drop_down"
                            app:tint="@color/black"
                            />

                        <TextView
                            android:id="@+id/txtSeemore3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="See more"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:visibility="gone" />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="#dddd"
                        />
                    <LinearLayout
                        android:id="@+id/linearAns3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <TextView
                            android:id="@+id/txtQ3AnsPoint1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wifiAns3"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/imgHelp5"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:src="@drawable/wifiansimg5"/>

                        <ImageView
                            android:id="@+id/imgHelp6"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:src="@drawable/wifiansimg6"/>

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
